--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
         <div class="mb-5">
             <h1 class="mb-3">Carlos Andrés Ramos García</h1>
             <p>
-                Estudiante de Ingeniería de sistemas comprometida en dar lo mejor de mí, caracterizada por mi 
+                Estudiante de Ingeniería de sistemas comprometido en dar lo mejor de mí, caracterizado por mi 
                 responsabilidad, puntualidad y honestidad en el cumplimiento de mis obligaciones.
                 Me destaco en el manejo del trabajo bajo presión y poseo el carácter necesario
                 para liderar equipos de trabajo de manera efectiva. Me gradue de bachillerato como
